# kairosmd

./: .env.example  .gitignore  README.md  deployment_guide.md  devpost_submission.md  kairosmd_fhir_bundle.json  pyproject.toml  ward_bundle.json
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.js
dashboard/src/app/api/mcp/: route.js
dashboard/src/app/brand/: page.js
dashboard/src/app/dashboard/: page.js
dashboard/src/app/dashboard/conflicts/: page.js
dashboard/src/app/dashboard/discharge/: page.js
dashboard/src/app/dashboard/patient/[id]/: page.js
dashboard/src/components/: Sidebar.js  VitalChart.js
dashboard/src/shared/: mcp.js
scratch/: debug_encounters.py  test_apis.py  test_sse.py
src/kairosmd/: __init__.py  config.py  conflict_detector.py  discharge_assessor.py  drug_interactions.py  external_apis.py  fhir_client.py  generate_bundle.py  labs_rules.py  llm_agent.py  news2.py  purge.py  risk_engine.py  seed.py  seed_data.py  server.py  test_fhir.py  triage_engine.py  vitals_rules.py  ward_actions.py  ward_engine.py  ward_manifest.json
