[project]
name = "kairosmd"
version = "0.1.0"
description = "KairosMD - Clinical Triage MCP Server for AI-powered patient prioritization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairosmd"]

[project.scripts]
kairosmd = "kairosmd.server:main"
